# flask-port

./: .flaskenv  requirements.txt  run.py  su.py  ter.html  trial.html
app/: __init__.py  forms.py  models.py  routes.py  summarizer.py
app/static/css/: generals_game.css  style.css
app/static/images/: 97ce6626-2911-4d9e-a782-78952031a4f6.jfif
app/templates/: about.html  add_projects.html  admin_dashboard.html  admin_login.html  admin_nav.html  blog.html  blog_entry.html  create_post.html  generals_game.html  home.html  layout.html  manage_posts.html  other_nav.html  projects.html
generals_game/: Cargo.toml
generals_game/src/: game_piece.rs  lib.rs
hexag/: index.html  script.js  styles.css
